--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,21 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="Home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_mapa"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="Mapa" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_reportar"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="Reportar" />
+
+    <item
+        android:id="@+id/navigation_perfil"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Perfil" />
 
 </menu>
