--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,20 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_mapa"
         android:name="com.example.mysea.MapaFragment"
-        android:label="@string/title_dashboard"
+        android:label="Mapa"
         tools:layout="@layout/fragment_mapa" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_reportar"
+        android:name="com.example.mysea.ReportarFragment"
+        android:label="Mapa"
+        tools:layout="@layout/fragment_reportar" />
+
+    <fragment
+        android:id="@+id/navigation_perfil"
         android:name="com.example.mysea.PerfilFragment"
-        android:label="@string/title_notifications"
+        android:label="Perfil"
         tools:layout="@layout/fragment_perfil" />
 </navigation>
