--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_300">#D1D5DB</color>
+    <color name="sky_100">#E0F7FA</color>
+    <color name="green_600">#16A34A</color>
 </resources>
